website.css
/* HELPFUL RESOURCES */
/* 1. https://css-tricks.com/solved-with-css-colorizing-svg-backgrounds/ */
/* 2. https://stackoverflow.com/questions/4502633/how-to-affect-other-elements-when-a-div-is-hovered
(top answer about selecting multiple elements with CSS) */
/* 3. https://www.sitepoint.com/set-css-margins-padding-cool-layout-tricks/
(explains how to set the 'box-sizing' attr so that padding is included in the
width of an element) */
/* 4. https://stackoverflow.com/questions/9576924/keep-background-image-centered-when-resizing-browser-window
(how to keep background image centered while resizing browser window)

/* ======================= TOP LEVEL STYLING======================= */

/* 1. Set font. */
/* 2. Make 'Return to top' scrolling smooth */

html {
  /* 1. */
  font-family: 'Lato', sans-serif;
  font-size: 15px;
  font-weight: 400;
  /* 2. */
  scroll-behavior: smooth;
  box-sizing: border-box;
}

*, *:before, *:after {
  box-sizing: inherit;
}

/**
 * 1. Center margin for main content in all browsers.
 * 2. Centre align text
 * 3. Define min and max page display widths.
 * 4. Apply background colour and viewport padding.
 */

body {
  /* 1. */
  margin: auto;
  /* 2. */
  text-align: center;
  /* 3. */
  /* min-width: 400px; */
  max-width: 800px;
  /* 4. */
  /* background: #2f2f2f; */
  /* background: rgb(34,193,195);
  background: linear-gradient(180deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%); */
  background-color: #c18e67;
  background-image: url(desk_background.svg);
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center center;
  /* background-size: cover; */
  padding: 20px;
}

p {
  line-height: 1.5em;
  margin-bottom: 1em;
}

strong {
  font-weight: 800;
}

em {
  font-style: italic;
}

h1, h2, h3, h4 {
  margin: 1.414em 0 0.5em;
  line-height: 1.35;
  color: #111;
  font-weight: 400;
}

h1 {
  margin-top: 0;
  font-size: 2em;
}

h2 {
  font-size: 1.6em;
}

h3 {
  font-size: 1.4em;
}

h4 {
  font-size: 1.2em;
}

hr {
  width: 80%;
  border: 1px solid #5d5d60;
}

span.italic {
  font-style: italic;
}

ul {
  margin-top: 0em;
  margin-bottom: 1.3em;
}

li {
  line-height: normal;
}

/* =======================MAIN CONTENT STYLING======================= */

.page {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
}

.pageBreak {
  position: relative;
  width: 100%;
  z-index: 0;
  text-align: center;
}

.instruction {
  font-family: 'Roboto Condensed', sans-serif;
  font-size: 0.7em;
  font-weight: 800;
  color: #2f2f2f;
  position: absolute;
  margin-top: 0;
  margin-bottom: 0;
  width: 100%;
  z-index: 5;
  pointer-events: none;
  animation: pulseInstruction 3s infinite;
}

@keyframes pulseInstruction {
  0% {
    color: #fdfdfd;
  }
  50% {
    color: #2f2f2f;
  }
  100% {
    color: #fdfdfd;
  }
}

.pageBreak:hover .instruction {
  animation-name: none;
  /* display: none; */
  visibility: hidden;
}

.rippedEdge {
  position: relative;
  background: transparent;
  /*===THIS Z-INDEX IS IMPORTANT===*/
  z-index: 2;
}

.rippedBottomMargin {
  margin-bottom: -22px;
}

.rippedPaperTop {
  preserveAspectRatio: none;
  position: relative;
  margin-bottom: -11px;
  width: 100%;
  height: 25px;
  fill: #ffffff;
  transform: scaleY(1);
  transition: all 0.25s ease;
  cursor: pointer;
  animation: pulseSVG 3s infinite;
  z-index: 4;
}

.rippedPaperBottom {
  preserveAspectRatio: none;
  position: relative;
  margin-top: -7px;
  top: 0;
  left: 0;
  width:100%;
  height: 25px;
  fill: #ffffff;
  transform: scaleY(1);
  transition: all 0.25s ease;
  cursor: pointer;
  animation: pulseSVG 3s infinite;
  z-index: 3;
}

@keyframes pulseSVG {
  0% {
    fill: #fdfdfd;
  }
  50% {
    fill: #ccc;
  }
  100% {
    fill: #fdfdfd;
  }
}

.pageBreak:hover .rippedPaperBottom, .pageBreak:hover .rippedPaperTop {
  fill: #fdfdfd;
  animation-name: none;
}

.fillGap {
  position: absolute;
  display: block;
  background: #fdfdfd;
  top: 0;
  left: 0;
  width: 100%;
  height: 55px;
  box-shadow: 5px 10px 10px 0px #000000;
  animation: pulseFillGap 3s infinite;
}

@keyframes pulseFillGap {
  0% {
    background: #fdfdfd;
  }
  50% {
    background: #ccc;
  }
  100% {
    background: #fdfdfd;
  }
}

.pageBreak:hover .fillGap {
  animation-name: none;
}

.tearLine {
  preserveAspectRatio: none;
  position: relative;
  margin-top: -25px;
  margin-bottom: 0px;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 25px;
  transform: scaleY(1);
  cursor: pointer;
  z-index: -1;
}

.hidden {
  display: none;
}

.rippedPaperEdge {
  preserveAspectRatio: none;
  position: relative;
  fill: none;
  margin-top: -4px;
  margin-bottom: 0px;
  width:100%;
  height: 25px;
  transform: scaleY(1);
  cursor: pointer;
  z-index: 4;
}

.rippedPaperEdgePath {
  preserveAspectRatio: none;
  position: relative;
  fill: none;
  margin-top: -4px;
  margin-bottom: 0px;
  width:100%;
  height: 25px;
  transform: scaleY(1);
  transition: all 0.25s ease;
  cursor: pointer;
  z-index: 5;
}

.pageBreak:hover .rippedPaperEdgePath {
  stroke: #2f2f2f;
  stroke-width: 2;
  fill: none;
  stroke-dasharray: 870;
  stroke-dashoffset: 870;
  animation: dash 1.5s forwards linear;
  z-index: 6;
}

@keyframes dash {
  from {
    stroke-dashoffset: 870;
  }
  to {
    stroke-dashoffset: 0;
  }
}

.active svg {
  fill: #ccc;
  animation-name: none;
}

.header {
  width: 100%;
  position: relative;
  background: #fdfdfd;
  padding: 5em 5em 0em 5em;
  box-shadow: 5px 10px 10px 0px #000000;
}

.hiddenHeader {
  display: none;
  position: relative;
  margin-top: 50px;
  margin-bottom: 30px;
  width: 100%;
  max-height: 0;
  transition: max-height 0.2s ease-out;
}

.introNote {
  position: relative;
  margin: 0 auto;
  width: 90%;
  padding: 0em 3em 2em 3em;
  display: flex;
  flex-direction: column;
  background: #f9f4ab;
}
/* ... */

